--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import net.researchgate.release.GitAdapter
-
 //plugins {
 //    id "io.spring.dependency-management" version "1.0.11.RELEASE"
 //    id "maven-publish"
@@ -26,8 +24,8 @@ allprojects {
     apply plugin: "maven-publish"
     apply plugin: "net.researchgate.release"
 
-//    group='org.one'
-//    version='1.0-SNAPSHOT'
+    group='org.one'
+    version='1.0-SNAPSHOT'
 
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
@@ -57,12 +55,12 @@ allprojects {
         failOnUnversionedFiles = false
 
         scmAdapters = [
-                //net.researchgate.release.GitAdapter
-                GitAdapter
+                net.researchgate.release.GitAdapter
+                //GitAdapter
         ]
 
         git {
-            requireBranch = 'master'
+            requireBranch = 'main'
             pushToRemote = 'origin'
             pushToBranchPrefix = ''
         }
