[Gradle Release Plugin] - pre tag commit:  '1.0'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ org.gradle.parallel=true
 kotlin.stdlib.default.dependency=false
 
 group=org.one
-version=1.0-SNAPSHOT
+version=1.0
 PREX_REPO_URL=http://www.codequick.xyz:8081/repository
