--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,6 @@ org.gradle.caching=true
 org.gradle.parallel=true
 kotlin.stdlib.default.dependency=false
 
+group=org.one
+version=1.5-SNAPSHOT
 PREX_REPO_URL=http://www.codequick.xyz:8081/repository
