--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ org.gradle.parallel=true
 kotlin.stdlib.default.dependency=false
 
 group=org.one
-version=1/5
+version=1.5
 PREX_REPO_URL=http://www.codequick.xyz:8081/repository
