--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import net.researchgate.release.GitAdapter
 //plugins {
 //    id "io.spring.dependency-management" version "1.0.11.RELEASE"
 //    id "maven-publish"
@@ -51,7 +52,7 @@ allprojects {
         failOnUnversionedFiles = false
         tagTemplate = 'v${version}'
         scmAdapters = [
-                net.researchgate.release.GitAdapter.GitAdapter
+                GitAdapter
         ]
 
         git {
